[project]
name = "contributor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sudoskys", email = "coldlando@hotmail.com"},
]
dependencies = [
    "github-bot-api>=0.6.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.3.3",
    "fastapi>=0.111.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
